--- a/views/updateShoe.handlebars
+++ b/views/updateShoe.handlebars
@@ -1,10 +1,12 @@
 <form action="/api/shoes" method="GET">
-<h2>Form 1</h2>
-{{#each shoeResults}}
+<h2>Welcome's Loobz shoe catalogue</h2>
+{{#each shoes}}
 <div id="each-shoe-div">
+    <p>Brand : {{this.brand}}</p>
+    <p>Color : {{this.color}}</p>
     <p>Size : {{this.size}}</p>
+    <p>Price : R{{this.price}}</p>
     <img src={{this.image_url}} alt="shoe image" width="200px" height="250px" />
-    <p>Price</p>
 </div>
 
 {{/each}}
