using res.json() method instead of res.send()

--- a/views/updateShoe.handlebars
+++ b/views/updateShoe.handlebars
@@ -5,6 +5,7 @@
     <p>Brand : {{this.brand}}</p>
     <p>Color : {{this.color}}</p>
     <p>Size : {{this.size}}</p>
+    <p>Stock available : {{this.stock}}</p>
     <p>Price : R{{this.price}}</p>
     <img src={{this.image_url}} alt="shoe image" width="200px" height="250px" />
 </div>
