display the shoes across the whole screen and values for filtering

--- a/views/updateShoe.handlebars
+++ b/views/updateShoe.handlebars
@@ -1,16 +1,50 @@
 <form action="/api/shoes" method="GET">
     <h2 id="welcome-heading">Welcome's Loobz shoe catalogue</h2>
-    {{#each shoes}}
-    <div id="each-shoe-div">
-        <p>Brand : {{this.brand}}</p>
-        <p>Color : {{this.color}}</p>
-        <p>Size : {{this.size}}</p>
-        <p>Stock available : {{this.in_stock}}</p>
-        <p>Price : R{{this.price}}</p>
-        <img src={{this.image_url}} alt="shoe image" width="300px" height="250px" />
-    </div>
+    
+    {{!-- <form action="/api/shoes/brand/{{brand}}" method="get">
+        <label for="brandOnly">Brand Only</label>
+        <select>
+            <option selected disabled>Choose a brand</option>
+            {{#each brand}}
+            <option name={{this}} value={{this}}>{{this}}</option>
+            {{/each}}
+        <button type="submit">Submit Brand</button>
+    </form> --}}
 
-    {{/each}}
+    <form action="/api/shoes/brand/:brandname/size/:size" method="get">
+        <div id="filter-div">
+            <label for="brand">Brand</label>
+            <select>
+                <option disabled selected >Select a brand</option>
+            {{#each brand}}
+                <option value={{this}}>{{this}}</option>  
+            {{/each}}
+            </select>
+
+            <label for="size">Size</label>
+            <select>
+                <option selected disabled>Choose a shoe size</option>
+                {{#each size}}
+                <option value={{this}}>{{this}}</option>
+                {{/each}}
+            </select>
+
+            <button type="submit">Submit</button>
+        </div>
+    </form>
+
+    <div id="shoes-div">
+        {{#each shoes}}
+        <div id="each-shoe-div">
+            <img src={{this.image_url}} alt="shoe image" width="300px" height="250px" />
+            <p>Brand : {{this.brand}}</p>
+            <p>Color : {{this.color}}</p>
+            <p>Size : {{this.size}}</p>
+            <p>Stock available : {{this.in_stock}}</p>
+            <p>Price : R{{this.price}}</p>
+        </div>
+        {{/each}}
+    </div>
 </form>
 
 
