--- a/views/updateShoe.handlebars
+++ b/views/updateShoe.handlebars
@@ -14,7 +14,7 @@
     <div id="shoes-div">
         {{#each shoes}}
         <div class="each-shoe-div">
-            <img src={{this.image_url}} class="image" alt="shoe image" width="290px" height="250px" />
+            <img src={{this.image_url}} class="image" alt="shoe image" />
             <p class="shoe-detail">Brand : <span class="shoe-data">{{this.brand}}</span></p>
             <p class="shoe-detail">Color : <span class="shoe-data">{{this.color}}</span></p>
             <p class="shoe-detail">Size : <span class="shoe-data">{{this.size}}</span></p>
