--- a/views/updateShoe.handlebars
+++ b/views/updateShoe.handlebars
@@ -23,7 +23,7 @@
             <div id="likes-div">
                 <span class="fa-regular fa-thumbs-up"></span>
             </div>
-            <button class="add-to-cart"> Add to Cart</button>
+            <button class="add-to-cart"> <i class="fa-solid fa-cart-plus" id="cart-icon"></i> Add to Cart</button>
         </div>
         {{/each}}
     </div>
