--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -79,7 +79,7 @@
     margin: 0 2em;
     font-size: 150%;
     color: dodgerblue;
-    transform: translateY(28px);
+    transform: translateY(1.2em);
 }
 
 #cart-icon{
