--- a/views/updateShoe.handlebars
+++ b/views/updateShoe.handlebars
@@ -1,29 +1,56 @@
 <h2 id="welcome-heading">Welcome to iNkwenkwezi shoe catalogue</h2>
 
-{{!-- Brand_Only form --}}
-<form action="/api/shoes/brand/" method="GET">
-    <label for="brandOnly">Brand Only</label>
-    <select name="brandname">
-        <option selected disabled>Choose a brand</option>
-        <option value="All" id="all-option">All</option>
-        {{#each brands}}
-        <option value={{this}}>{{this}}</option>
-        {{/each}}
-    </select>
-    <button type="submit">Submit Brand</button>
-</form>
+<div class="filters">
+    {{!-- Brand_Only form --}}
+    <form action="/api/shoes/brand/" method="GET">
+        <label for="brandOnly">Brand Only</label>
+        <select name="brandname">
+            <option selected disabled>Choose a brand</option>
+            <option value="All" id="all-option">All</option>
+            {{#each brands}}
+            <option value={{this}}>{{this}}</option>
+            {{/each}}
+        </select>
+        <button type="submit">Submit Brand</button>
+    </form>
 
-{{!-- Size_Only form --}}
-<form action="/api/shoes/size/" method="GET">
-    <label for="sizeOnly">Size Only</label>
-    <select name="size">
-        <option selected disabled>Choose a size</option>
-        {{#each sizes}}
-        <option value={{this}}>{{this}}</option>
-        {{/each}}
-    </select>
-    <button type="submit">Submit Size</button>
-</form>
+    {{!-- Size_Only form --}}
+    <form action="/api/shoes/size/" method="GET">
+        <label for="sizeOnly">Size Only</label>
+        <select name="size">
+            <option selected disabled>Choose a size</option>
+            {{#each sizes}}
+            <option value={{this}}>{{this}}</option>
+            {{/each}}
+        </select>
+        <button type="submit">Submit Size</button>
+    </form>
+
+    {{!-- Brand_and_Size form --}}
+    <form action="/api/shoes/brand/size" method="GET">
+    {{!-- Brand  --}}
+        <label for="brand">Brand</label>
+        <select name="brand_name">
+            <option selected disabled>Choose a brand</option>
+            {{#each brands}}
+            <option value="{{this}}">{{this}}</option> 
+            {{/each}}
+        </select>
+
+        {{!-- Size  --}}
+        <label for="size">Size</label>
+        <select name="size">
+            <option selected disabled>Choose a size</option>
+            {{#each sizes}}
+            <option value="{{this}}">{{this}}</option>
+            {{/each}}
+        </select>
+
+        <button type="submit">Submit both</button>
+    </form>
+
+</div>
+
 
 <form action="/api/shoes" method="GET" id="shoes-form">
 
