--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -127,7 +127,7 @@
 .submit_btn{
     border-radius: 4px;
     border: none;
-    margin: 0 .5em;
+    margin: .2em .5em;
     padding: .4em .6em;
     background-color: darkslategray;
     color: navajowhite;
