Adding message elements on the main display

--- a/views/updateShoe.handlebars
+++ b/views/updateShoe.handlebars
@@ -53,6 +53,9 @@
 
 </div>
 
+//Messages
+<p id="success_message">{{messages.success}}</p>
+<p id="error_message">{{messages.error}}</p>
 
 <form action="/api/shoes" method="GET" id="shoes-form">
 
