Proper handlebars commenting - Messages

--- a/views/updateShoe.handlebars
+++ b/views/updateShoe.handlebars
@@ -53,7 +53,7 @@
 
 </div>
 
-//Messages
+{{! Messages --}}
 <p id="success_message">{{messages.success}}</p>
 <p id="error_message">{{messages.error}}</p>
 
