--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -146,6 +146,13 @@
     color: beige;
 }
 
+#error_message, #success_message{
+    font-family: 'Exo 2', sans-serif;
+    font-weight: bolder;
+    text-align: center;
+    padding: 1em 2em;
+}
+
 #success_message{
     color: green;
 }
@@ -154,11 +161,6 @@
     color: red;
 }
 
-#error_message, #success_message{
-    font-family: 'Exo 2', sans-serif;
-    text-align: center;
-    padding: 1em 2em;
-}
 
 @media screen AND (max-width: 631px){
     
