--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,8 @@
 
     <div id="login-container">
         <h3>Login</h3>
-
+        <p>{{messages.success}}</p>
+        <p>{{messages.error}}</p>
         <div class="login-pair">
             <label for="email" class="login-label">Email</label>
             <input type="email" name="email" class="login-input">
