--- a/views/updateShoe.handlebars
+++ b/views/updateShoe.handlebars
@@ -1,4 +1,4 @@
-<h2 id="welcome-heading">Welcome to iNkwenkwezi shoe catalogue</h2>
+<h2 id="welcome-heading">Hello {{details.name}}, Welcome to iNkwenkwezi shoe catalogue</h2>
 
 <div class="filters">
     {{!-- Brand_Only form --}}
@@ -72,7 +72,6 @@
                 <div id="likes-div">
                     <span class="fa-regular fa-thumbs-up"></span>
                 </div>
-                
                 <button type="submit" class="add-to-cart"> <i class="fa-solid fa-cart-plus" id="cart-icon"> </i> Add to Cart</button>
                 
                 {{!-- <button type="submit">Add to cart</button> --}}
