--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Abel&family=Alegreya+Sans+SC&family=Caveat&family=Comfortaa:wght@300&family=Exo+2:wght@200&family=Gruppo&family=Handjet&family=Inconsolata:wght@500&family=Jersey+25&family=Merienda&family=Miltonian+Tattoo&family=Montserrat:ital@1&family=Playfair+Display&family=Poppins:wght@200&family=Protest+Revolution&family=Rubik+Glitch+Pop&family=Ultra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Alegreya+Sans+SC&family=Caprasimo&family=Caveat&family=Cinzel:wght@400..900&family=Comfortaa:wght@300&family=Exo+2:wght@200&family=Frijole&family=Gruppo&family=Handjet&family=Inconsolata:wght@500&family=Jersey+25&family=Londrina+Shadow&family=Merienda&family=Miltonian+Tattoo&family=Montserrat:ital@1&family=Playfair+Display&family=Poetsen+One&family=Poppins:wght@200&family=Protest+Revolution&family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&family=Rubik+Dirt&family=Rubik+Glitch+Pop&family=Rubik+Iso&family=Tilt+Prism&family=Ultra&display=swap');
 
 #welcome-heading{
     text-align: center;
@@ -174,6 +174,91 @@
 
 .register-input-label{
     text-align: start;
+}
+
+#register-container{
+    background-image: url('../images/bg2.png');
+    background-repeat:no-repeat;
+    background-size: contain;
+    background-attachment: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #E3E1D9;
+    height: 100vh;
+}
+
+#register-div{
+    width: fit-content;
+    box-shadow: 4px 2px 10px #333;
+    padding: 1em;
+    margin: 0 0 10em 15em;
+    border-radius: 5px;
+    background-color: #F2EFE5;
+    filter: blur(.5px);
+}
+
+.register-input-pair{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.name-input{
+    border-radius: 10px;
+    border: none;
+    margin: 0 .3em;
+    padding: .3em 1em;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    box-shadow: .5px .5px 5px lightslategray;
+}
+
+.register-input-label{
+    padding: .1em .5em;
+    font-family: 'Radio Canada Big';
+    letter-spacing: .5px;
+    text-shadow: .5px .5px 2px #333;
+}
+
+#register-btn{
+    background-color: #B0A695;
+    padding: .6em 3em;
+    border: none;
+    margin: .3em .5em;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px #333;
+    font-family: 'Merienda', sans-serif;
+    letter-spacing: 1px;
+    text-shadow: .5px .5px 1px #fff;
+}
+
+#register-btn:hover{
+    color: #fff;
+    cursor: pointer;
+    text-shadow: .5px .5px 1px #333;
+}
+
+#register-header{
+    font-family: 'Playfair Display', sans-serif;
+    letter-spacing: 1px;
+    text-shadow: .5px .5px 1px #39A7FF;
+}
+
+#register-error-message, #register-success-message{
+    text-align: center;
+    margin: 4em 0 2em 15em;
+}
+
+#register-error-message{
+    color: crimson;
+}
+
+#register-success-message{
+    color: green;
 }
 
 
